# kata

./: 1-1-unique-characters.cc  1-2-string-reverse.cc  1-3-is-permutation.cc  1-5-string-compression.cc  1-6-matrix-rotate.cc  100to1.cc  2-1-list-remove-duplicates.cc  2-2-list-kth-to-last-element.cc  2-4-list-partition-around-value.cc  2-5-list-add-digits.cc  3-2-stack-with-min.cc  3-3-set-of-stacks.cc  3-4-towers-of-hanoi.cc  3-5-queue-on-2-stacks.cc  3-6-sort-stack.cc  UT602x_labgen.c  add_hex_strings.c  add_two_integers_as_lists_of_digits.cc  bitmap.cc  bitmap.h  bst.cc  circular_list.c  connect_tree_siblings.cc  copy_list_with_arbitrary_pointer.cc  edx_sim.c  expression_tree.c  find_all_palindrome_substrings.cc  find_all_sum_combinations.cc  fizzbuzz.cc  flood_fill.cc  has_sum_of_2.cc  k_most_frequent.cc  kth_closest_vertex.cc  list_ranges.cc  list_reverse.cc  longest_ones.cc  lru.c  lru_cache.cc  maze_path.cc  missing_integer.cc  (+18 more)
ctci/: 1.1 all unique.cc  1.2 check permutations.cc  1.3 urlify.cc  1.4 palindrome permutation.cc  1.5 one away.cc  1.6 string compression.cc  1.7 matrix rotate.cc  1.8 zero matrix.cc  1.9 string rotation.cc  2.1 remove duplicates.cc  2.2 kth to last.cc  2.3 delete middle.cc  2.4 partition.cc  2.5 sum lists.cc  2.6 palindrome.cc  2.8 loop detection.cc  3.1 three in one.cc  3.2 stack min.cc  3.3 set of stacks.cc  3.4 queue via stacks.cc  3.5 sort stack.cc  (+15 more)
tcp/: Makefile.am  Makefile.in
tcp/include/: conn.h  socket.h  state.h  strategy.h
tcp/include/codegen/: af_x.h  sock_x.h
tcp/src/: bsdsocket.cpp  conn.cpp  state.cpp  unixsocket.cpp
(+17 files in other folders)
